gjorde fullstednig rk4

--- a/prosjekt5/LaTex/project5.tex
+++ b/prosjekt5/LaTex/project5.tex
@@ -321,7 +321,7 @@ Stuff
 	%Scale angir størrelsen på bildet. Bildefilen må ligge i samme mappe som tex-filen. 
 	\includegraphics[scale=0.56]{../plots/opp_c_k3.pdf} %kan kaskje være først?
 	\includegraphics[scale=0.56]{../plots/opp_c_k0.pdf}
-	\caption{Plots of population $A$ when accounting for vital dynamics. On the left $d_i=0.01$ and on the rigth $d_i=3$. The left $d_i$ is to low to effectively kill the entire population, while the one is too large.}
+	\caption{Plots of population $A$ when accounting for vital dynamics. On the left $d_i=0.01$ and on the rigth $d_i=3$. The left $d_i$ is too low to effectively kill the entire population, while the one is too large.}
 %	\includegraphics[scale=0.56]{../plots/opp_c_k1.pdf}
 	%trenger kansjke ikke begge disse
 %	\includegraphics[scale=0.56]{../plots/opp_c_k2.pdf}
@@ -337,7 +337,7 @@ Stuff
 	%Scale angir størrelsen på bildet. Bildefilen må ligge i samme mappe som tex-filen. 
 	\includegraphics[scale=0.56]{../plots/opp_c_h_10000.pdf}
 	\includegraphics[scale=0.56]{../plots/opp_c_h_20000.pdf}	
-	\includegraphics[scale=0.56]{../plots/opp_c_h_100000.pdf}
+	\includegraphics[scale=0.56]{../plots/opp_c_h_100000.pdf} %denne?
 	\caption{Plots of popualtion $B$  when accounting for vital dynamics with $d_i=0.1$, and $d$ and $e$ is increased by a factor of 1000, 2000 and 10000 respectively.}
 	%Label gjør det enkelt å referere til ulike bilder.
 	\label{opp_c2}
